--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <footer>
         <div class="footercontainer">
             <div class="socialicons">
-                <a href="#"><i class="fa-brands fa-instagram"></i> </a>
-                <a href="#"><i class="fa-brands fa-whatsapp"></i> </a>
+                <a href="https://www.instagram.com/senpaihood/"><i class="fa-brands fa-instagram"></i> </a>
+                <a href="https://chat.whatsapp.com/I3jIpTZBR8j7EXXFfuS7dJ"><i class="fa-brands fa-whatsapp"></i> </a>
             </div>
 
         </div>
